The beginnings of support for running web apps in Catalina under a security manager.  NOTE:  you cannot actually start Catalina with security enabled yet, because the appropriate ProtectionDomains are not initialized, so don't bother trying (unless you want to help implement this feature -- then you are quite welcome :-).
git-svn-id: https://svn.apache.org/repos/asf/tomcat@285037 13f79535-47bb-0310-9956-ffa450edef68